chore(*) add a lot of poo classes but write CAS for byte[]