@@ -68,24 +68,4 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <!--<compiling source-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArgs>
-                        <arg>-J--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-            <!--compiling source>-->
-        </plugins>
-    </build>
-
 </project>
